--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <title>To do List</title>
 </head>
 <body>
-    
+    <div class="containerList">
+        <input placeholder="O que tenho que fazer ...">
+        <button>Adicionar</button>
+
+    <ul>
+        <li>
+            <img src="assets/checked.png" alt="">
+            Teste
+            <img src="assets/trash.png" alt="">
+        </li>
+    </ul>
+    </div>
 </body>
 </html>
