--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
         <li>
             <img src="assets/checked.png" alt="">
-            Teste
+            <p>Test</p>
             <img src="assets/trash.png" alt="">
         </li>
     </ul>
