--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="js.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>To do List</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="containerList">
-        <input placeholder="O que tenho que fazer ...">
-        <button>Adicionar</button>
+      <input class="inputTask" placeholder="O que tenho que fazer ..." />
+      <button class="buttonTask">Adicionar</button>
 
-    <ul>
-        <li>
-            <img src="assets/checked.png" alt="">
-            <p>Test</p>
-            <img src="assets/trash.png" alt="">
-        </li>
-    </ul>
+      <div class="containerTask">
+        <ul>
+          <li>
+            <img src="assets/checked.png" alt="" />
+            <p>Tarefa teste</p>
+            <img src="assets/trash.png" alt="" />
+          </li>
+        </ul>
+      </div>
+      <div class="containerTask">
+        <ul>
+          <li>
+            <img src="assets/checked.png" alt="" />
+            <p>Tarefa teste</p>
+            <img src="assets/trash.png" alt="" />
+          </li>
+        </ul>
+      </div>
     </div>
-</body>
+  </body>
+  <script src="script.js"></script>
 </html>
