css\html/js final

--- a/index.html
+++ b/index.html
@@ -12,24 +12,8 @@
       <input class="inputTask" placeholder="O que tenho que fazer ..." />
       <button class="buttonTask">Adicionar</button>
 
-      <div class="containerTask">
-        <ul>
-          <li>
-            <img src="assets/checked.png" alt="" />
-            <p>Tarefa teste</p>
-            <img src="assets/trash.png" alt="" />
-          </li>
-        </ul>
-      </div>
-      <div class="containerTask">
-        <ul>
-          <li>
-            <img src="assets/checked.png" alt="" />
-            <p>Tarefa teste</p>
-            <img src="assets/trash.png" alt="" />
-          </li>
-        </ul>
-      </div>
+    <div class="contentTask">
+    </div>
     </div>
   </body>
   <script src="script.js"></script>
